2003-12-10  Benjamin Kosnik  <bkoz@redhat.com>

PR libstdc++/10063
	* config/io/basic_file_stdio.cc (__basic_file::sys_open): Sync.
	* testsuite/ext/stdio_filebuf/char/10063-1.cc: New.
	* testsuite/ext/stdio_filebuf/char/10063-2.cc: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@74505 138bc75d-0d04-0410-961f-82ee72b054a4